<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/colorPrimary"
    android:foreground="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageContainer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:civ_border_width="1dp"
            app:civ_border_color="@android:color/black"
            android:src="@drawable/ic_grey_account_circle_24"
            android:contentDescription="@string/profile_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usernameContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/name_sample"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            app:layout_constraintEnd_toStartOf="@+id/itemFavoriteButton"
            app:layout_constraintStart_toEndOf="@+id/imageContainer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userIdContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/username_sample"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageContainer"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageContainer"
            app:layout_constraintTop_toBottomOf="@+id/usernameContainer"
            android:contentDescription="@string/divider" />

        <ImageButton
            android:id="@+id/itemFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/ic_favorite_empty_24"
            app:layout_constraintBottom_toBottomOf="@+id/usernameContainer"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/usernameContainer"
            android:contentDescription="@string/favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>