<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <include
        android:id="@+id/detailToolbar"
        layout="@layout/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/bottomBackgroudSpace"
        android:layout_width="0dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationIcon" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/this_is_background"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomBackgroudSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
        app:layout_constraintVertical_weight="0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detailImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_grey_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailToolbar" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/detailViewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background"
        app:tabIndicatorColor="@android:color/white"
        app:tabRippleColor="@color/greyish_white"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/detailViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detTabLayout"
        app:layout_constraintVertical_weight="0">


    </androidx.viewpager.widget.ViewPager>

    <TextView
        android:id="@+id/detailName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/name_sample"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailImage"
        app:layout_constraintTop_toTopOf="@+id/detailImage" />

    <TextView
        android:id="@+id/detailUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:shadowColor="@android:color/white"
        android:text="@string/username_sample"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailImage"
        app:layout_constraintTop_toBottomOf="@+id/detailName" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/white"
        android:contentDescription="@string/divider"
        app:layout_constraintBottom_toTopOf="@+id/detailUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailImage"
        app:layout_constraintTop_toBottomOf="@+id/detailName" />

    <TextView
        android:id="@+id/detailId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:text="@string/id_template"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/repoIcon"
        app:layout_constraintStart_toStartOf="@+id/detailImage"
        app:layout_constraintTop_toBottomOf="@+id/detailImage" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="@+id/detailId"
        app:layout_constraintTop_toBottomOf="@+id/detailId"
        app:srcCompat="@drawable/ic_location_white_24" />

    <TextView
        android:id="@+id/detailLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/location_sample"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toEndOf="@+id/locationIcon"
        app:layout_constraintTop_toTopOf="@+id/locationIcon" />

    <TextView
        android:id="@+id/detailRepo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:text="@string/repo_sample"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/repoIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repoIcon"
        app:layout_constraintTop_toTopOf="@+id/repoIcon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/detailCompany"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:text="@string/companySample"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/companyIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyIcon"
        app:layout_constraintTop_toTopOf="@+id/companyIcon"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/repoIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/repo"
        app:layout_constraintBottom_toBottomOf="@+id/detailId"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/detailId"
        app:srcCompat="@drawable/ic_repo_white_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="215dp" />

    <ImageView
        android:id="@+id/companyIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/company"
        app:layout_constraintBottom_toBottomOf="@+id/detailLocation"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/detailLocation"
        app:srcCompat="@drawable/ic_company_white_24" />

    <ImageView
        android:id="@+id/errorBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/this_is_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
        app:layout_constraintVertical_weight="2" />

    <TextView
        android:id="@+id/detailErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/unknown_error"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/detailRetryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <Button
        android:id="@+id/detailRetryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/greyish_white"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/try_again"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/detailViewPager"
        app:layout_constraintEnd_toEndOf="@+id/detailErrorText"
        app:layout_constraintStart_toStartOf="@+id/detailErrorText"
        app:layout_constraintTop_toBottomOf="@+id/detailErrorText"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>